pihole/orbital-sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orbital-sync
  namespace: pihole
spec:
  selector:
    matchLabels:
      app: orbital-sync
  template:
    metadata:
      labels:
        app: orbital-sync
    spec:
      containers:
        - name: orbital-sync
          image: mattwebbio/orbital-sync:latest
