pihole/web-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pihole-web-svc
  namespace: pihole
spec:
  selector:
    app: pihole
    statefulset.kubernetes.io/pod-name: pihole-0 # label automatically applied by StatefulSet, redirect traffic only to the primary instance

  type: ClusterIP
  ports:
    - name: svc-80-tcp-web
      port: 80
      targetPort: 80
      protocol: TCP
