pihole/traefik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-web-ingress
  namespace: pihole
spec:
  routes:
    - match: Host(`pihole.technolev.work`)
      kind: Rule
      services:
        - name: pihole-web-svc
          port: 80
